# fynesse_template

./: .flake8  .gitignore  Copy_of_02_pandas_practical.ipynb  README.md  access_tests.py  address_tests.py  assess_tests.py  process_tests.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_access.py  test_address.py  test_assess.py
.github/workflows/: access-tests.yml  assess-tests.yml  code-quality.yml  process-tests.yml  test.yml
_notebooks/: 02-pandas-practical.ipynb
backlog/infrastructure/: 2025-08-30_framework-modernization-gaps.md
danalysis/: access.py  assess.py  config.py  process.py
fynesse/: __init__.py  access.py  address.py  assess.py  config.py  defaults.yml
fynesse/tests/: __init__.py  test_access.py  test_address.py  test_assess.py
notebooks/: data-analysis-template.ipynb  data-analysis-template.md
tenets/: educational-clarity.md  fynesse-tenets.md  modern-practices.md  template-structure.md  vibesafe-tenets.md  vibesafe-tenets.yaml
